--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,28 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: black;
 }
 body {
-    background: whitesmoke;
+    background-image: url('../css/sea-7504986_1280\ \(1\).jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    margin: 0;
+    position: relative;
 }
+
+.conteudo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    color: aliceblue;
+    font-size: 2em;
+    text-align: center;
+}
+
 header {
     background: #fff;
     color: #333;
@@ -21,5 +39,7 @@ header nav ul {
     gap: 20px;
 }
 header nav ul a{
-    margin-left: 20px;
+    text-decoration: none;
+    color: rgb(174, 101, 242);
+    font-weight: 400;
 }
