--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,20 @@ header nav ul a{
     color: rgb(174, 101, 242);
     font-weight: 400;
 }
+.spotify{
+    width: 45px;
+    height: auto;
+}
+.github{
+    width: 45px;
+    height: auto;
+}
+.alura{
+    width: auto;
+    height: 45px;
+}
+.chatgpt{
+    width: 45px;
+    height: auto;
+    
+}
