--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,9 @@ header nav ul a{
 }
 .chatgpt{
     width: 45px;
-    height: auto;
-    
+    height: auto;    
+}
+.logo{
+    width: 120px;
+    height: auto;      
 }
