--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ header nav ul a{
     text-align: center;
     margin-top: 100px;
     padding: 40px;
-    background-color: #;
+    background-color: rgba(0,0,0,0);
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1)
 }
