--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,42 @@ header nav ul a{
   .status{
     background-color: #fff;
   }
+
+  .notes {
+    position: fixed;       
+    top: 60%;              
+    right: 150px;           
+    width: 500px;          
+    background-color: #fff;
+    padding: 15px;         
+    border-radius: 40px;    
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+    z-index: 1000;         
+    transform: translateY(-50%); 
+}
+textarea {
+    width: 100%;           
+    padding: 80px;         
+    font-size: 14px;       
+    border-radius: 8px;    
+    border: 1px solid #ccc;
+    box-sizing: border-box; 
+}
+textarea:focus {
+    outline: none;
+    border-color: #00060c; 
+}
+
+#saveButton {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #4CAF50; 
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#saveButton:hover {
+    background-color: #45a049;
+}
